--- a/nodejs/ApiValues/package.json
+++ b/nodejs/ApiValues/package.json
@@ -4,12 +4,13 @@
   "description": "My fist API sample/demo to learn Nodejs",
   "main": "app.js",
   "dependencies": {
-    "body-parser": "1.17.2",
+    "body-parser": "^1.19.0",
     "eslint-plugin-node": "5.1.1",
-    "express": "^4.17.1",
+    "express": "^4.17.1",    
     "mongodb": "^3.4.0",
     "mongoose": "^5.8.1",
     "swagger": "^0.7.5",
+    "swagger-jsdoc": "^3.5.0",
     "swagger-ui-express": "^4.1.2"
   },
   "devDependencies": {},
