--- a/nodejs/NetCoder/package.json
+++ b/nodejs/NetCoder/package.json
@@ -6,9 +6,12 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "eslint-plugin-node": "5.1.1",
-    "express": "^4.17.1",    
-    "mongodb": "^3.4.0",
-    "mongoose": "^5.8.1",
+    "express": "^4.17.1",
+    "lodash": "^4.17.15",
+    "mocha": "^6.2.2",
+    "mongodb": "^3.4.1",
+    "mongoose": "^5.8.2",
+    "structured-log": "^0.2.0",
     "swagger": "^0.7.5",
     "swagger-jsdoc": "^3.5.0",
     "swagger-ui-express": "^4.1.2"
